CHANGES

Trunk
	Allow compressed output of XML for srcml2src also.

	Change compressed option flag to "--compress".

	Improved error message for out of range unit error in srcml2src.

	Markup parentheses in expressions as operators.

	Rework internal handling of URI's.

	Fix bug with fully qualified class names for extends and implements.

	Convert variable declarations to also allow markup of anonymous structs.

	New option to self version according to the src2srcml version.

	Markup function header incrementally.

	Add post-parsing grammar rule for cleanup.

	Make variable with class/struct/union definition as type a declaration in type.

	Start of markup of structs in typedefs.

	Fixed typedef ending error.

	Added option to turn off XML declaration.

	Specifying prefix for http://www.sdml.info/srcML/srcerr automatically turns on debugging
	same as --debug option.

	Don't include cpp namespace declaration for languages other than C or C++.

	Fix missing markup of exception handling for Java.

	Output prefixes on info.

	Change srcml2src namespace prefix flag to "prefix" instead of "namespace".

	Fix incorrect markup of anonymous Java classes.

	Check for non-unique namespace prefixes.

	Add option to src2srcml to allow for specification of namespace prefix.

	Add option to extract prefix of a namespace from srcml2src.

	Change --info option in srcml2src to use new multiple output options.

	Allow for multiple output (in order) of attributes.

	SIGINT handling for unit count.

	Fix help formatting error.

	Change cpp markup to text instead of textonly.

	Generate internal tokens for indexes.

	Change hidden --extended option to public --literal option.

	Move --xml-encoding to help section dealing with output srcML settings.

	Short flag for --extract-all in srcml2src has been changed from -e to -a.

	New status 16 for prematurely terminated input lists.

	For multiple input files, the first SIGINT signal lets the current file finish.